--- a/package.json
+++ b/package.json
@@ -1,25 +1,19 @@
 {
-  "name": "frankisdigital",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "hardware-store-backend",
+  "version": "1.0.0",
+  "description": "Backend API for Hardware Store Management System",
+  "main": "server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "react-dom": "^19.2.4",
-    "react": "^19.2.4",
-    "react-router-dom": "^7.13.0",
-    "recharts": "^3.7.0",
-    "lucide-react": "^0.564.0",
-    "@google/genai": "^1.41.0"
+    "express": "^4.18.2",
+    "@supabase/supabase-js": "^2.38.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "nodemon": "^3.0.2"
   }
 }
